[package]
name = "astrothrive"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }